# atomartist

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  requirements.txt
.cargo/: config.toml
.claude/: settings.local.json
.claude/skills/acp/: SKILL.md
.claude/skills/skill-creator/eval-viewer/: generate_review.py  viewer.html
.claude/skills/skill-creator/scripts/: generate_report.py  improve_description.py  run_loop.py  utils.py
.github/workflows/: ci.yml  deploy-demo.yml
atomartist-lib/: Cargo.toml
atomartist-lib/src/: lib.rs  registry.rs  socket_types.rs
atomartist-lib/src/geometry/: geometry3d.rs  mesh3d.rs  mod.rs  path2d.rs  primitives.rs
atomartist-lib/src/graph/: execution_order.rs  executor.rs  graph.rs  mod.rs  node.rs  socket.rs  socket_mutations.rs  undo_commands.rs
atomartist-lib/src/nodes/: mod.rs  output_node.rs  subgraph_node.rs
atomartist-lib/src/nodes/io/: graph_input_node.rs  graph_output_node.rs  mod.rs
atomartist-lib/src/nodes/math/: binary_op_node.rs  mod.rs  number_const_node.rs
atomartist-lib/src/nodes/mesh/: library_mesh_node.rs  mesh_node.rs  mod.rs
atomartist-lib/src/nodes/ops_2d/: inflate_node.rs  mod.rs  smooth_paths_node.rs  stroke_node.rs
atomartist-lib/src/nodes/ops_3d/: align_node.rs  boolean_node.rs  combine_node.rs  extrude_node.rs  fit_to_bounds_node.rs  mod.rs  transform_node.rs
atomartist-lib/src/nodes/primitives_2d/: circle_node.rs  mod.rs  rectangle_node.rs  ring_node.rs  star_node.rs
atomartist-lib/src/nodes/primitives_3d/: box_node.rs  cone_node.rs  cylinder_node.rs  mod.rs  pyramid_node.rs  sphere_node.rs  torus_node.rs  wedge_node.rs
atomartist-lib/src/registry/: editor.rs  geometry_props.rs
atomartist-lib/src/serialization/: asset_store.rs  atmr.rs  change_detection.rs  graph_json.rs  mesh_3mf.rs  mesh_io.rs  mesh_obj.rs  mod.rs  nodedesigner_import.rs
atomartist-lib/tests/: align_and_fit.rs  change_detection.rs  execution_order.rs  extrude_geometry.rs  file_line_count.rs  graph_pipeline.rs  matrix_utils.rs  mesh_fixtures.rs  node_connections.rs  node_sockets.rs  nodedesigner_examples.rs  output_node_dynamic.rs  primitives_axis.rs  primitives_manifold.rs  socket_management.rs  subgraphs.rs
atomartist-lib/tests/common/: mod.rs
atomartist-lib/tests/meshes/: simple_box.stl
atomartist-lib/tests/nodedesigner_examples/: 3D Primitives.json  3D Text.json  Align.json  Base.json  Bevel Path.json  Bevel Test.json  Boolean Color Test.json  Box & Walls.json  Clock.json  Customizer.json  Difference Colors.json  Drag on Line.json  Drag on Plane.json  Edge Bracket.json  Fit Text.json  Formula.json  Geometry Should Stay Manifold.json  Hold Z to 0.json  Image To Path.json  Round Cut Image Path.json  Round Cut Image.json  Screw Hole.json  Side With Holes.json  Simple Box.json  Single Component.json  Text Test.json  Uni-Cutter.json
atomartist-renderer/: Cargo.toml
atomartist-renderer/src/: camera.rs  camera_animations.rs  camera_tests.rs  lib.rs  picking.rs  scene_renderer.rs  scene_shaders.rs  viewport_widget.rs  viewport_widget_helpers.rs  viewport_widget_tests.rs
atomartist-renderer/src/bed/: mod.rs  shaders.rs  shadow.rs  shadow_pipelines.rs  texture.rs
atomartist-renderer/src/scene_renderer/: accumulation.rs  accumulation_tests.rs  body_uniform.rs  cache.rs  mod.rs  opaque_pass.rs  opaque_shaders.rs  render_impl.rs  tests.rs  timings.rs  util.rs
atomartist-renderer/src/scene_renderer/depth_peel/: mod.rs  pipeline_build.rs  pipelines.rs  shaders.rs
atomartist-renderer/src/scene_renderer/gizmo_pass/: handles.rs  mod.rs  pipelines.rs  shaders.rs
atomartist-renderer/src/scene_renderer/post_outline/: mod.rs  pipelines.rs  shaders.rs
atomartist-renderer/src/tumble_cube/: cube_geometry.rs  face_textures.rs  hit_test.rs  mod.rs  orient.rs  renderer.rs  widget.rs  widget_tests.rs
atomartist-renderer/src/viewport_widget/: body_drag.rs  camera_drag.rs  inputs.rs  overlays.rs  rotate_gizmo.rs  rotate_interactions.rs  scale_interactions.rs  scene_state.rs  viewport_widget_interactions.rs  z_control_gizmo.rs  z_interactions.rs
atomartist-renderer/src/viewport_widget/rotate_gizmo/: arrow.rs  compass.rs  corners.rs  handle.rs  mod.rs
atomartist-ui/: Cargo.toml
atomartist-ui-test/: Cargo.toml
atomartist-ui-test/src/: harness.rs  lib.rs
atomartist-ui-test/tests/: canvas_interaction.rs  components.rs  debug_windows.rs  drag_drop_mesh.rs  widget_behavior.rs  workflows.rs
atomartist-ui/src/: app_state.rs  app_state_model.rs  canvas_draw.rs  canvas_widget.rs  circular_dropdown.rs  circular_icon_button.rs  debug_windows.rs  floating_overlay.rs  icons.rs  lib.rs  mattercad_icons.rs  node_helpers.rs  settings.rs  settings_tests.rs  shell_init.rs  status_bar.rs  top_level.rs  top_menu_bar.rs  viewport_overlay.rs  viewport_overlay_hud_bay.rs  viewport_overlay_tests.rs
atomartist-ui/tests/: live_eval.rs  undo_round_trip.rs
demo-native/: Cargo.toml
demo-native/src/: frame.rs  gpu.rs  main.rs
demo-wasm/: Cargo.toml  index.html
demo-wasm/src/: lib.rs
docs/: node-graph-refactor-progress.html
migrations/: 001_initial.sql
src/: app.py  config.py  config.rs  main.rs  models.py
src/db/: mod.rs
src/routes/: __init__.py  api.py  api.rs  health.py  health.rs  mod.rs
src/templates/: index.html
