[workspace]
members = [
    "atomartist-lib",
    "atomartist-renderer",
    "atomartist-ui",
    "atomartist-ui-test",
    "demo-native",
    "demo-wasm",
]
default-members = [
    "atomartist-lib",
    "atomartist-ui",
    "demo-native",
]
resolver = "2"

# Shared third-party deps — declared at the workspace level so every
# crate that needs them resolves to the same version.
[workspace.dependencies]
# `glam` for 3-D linear algebra. Picked for its small footprint, fast
# wasm builds, and `wgpu`-friendly `Mat4::to_cols_array` interop. We
# do NOT enable `bytemuck` / `serde` features by default — opt in
# per-crate if they are ever needed.
glam = { version = "0.30", default-features = false, features = ["std"] }

# Optimize dependencies in debug builds so the rendering / geometry path
# runs at near-release speed while user code stays unoptimized
# (fast incremental compile, usable backtraces).
[profile.dev.package."*"]
opt-level = 2

# ---------------------------------------------------------------------------
# Local sibling-submodule path overrides
# ---------------------------------------------------------------------------
# AtomArtist depends on agg-gui, manifold-rust, clipper2-rust, tess2-rust as
# sibling submodules in the rust-apps directory while we develop them in
# tandem. To switch to published crates, comment out this section.
#
# [patch.crates-io]
# agg-gui       = { path = "../agg-gui/agg-gui" }
# manifold-rust = { path = "../manifold-rust" }
# clipper2-rust = { path = "../clipper2-rust" }
# tess2-rust    = { path = "../tess2-rust" }
