[package]
name = "atomartist-lib"
version = "0.0.1"
edition = "2021"
rust-version = "1.70"
authors = ["Lars Brubaker <larsbrubaker@matterhackers.com>"]
license = "MIT"
description = "AtomArtist core: graph engine, node types, geometry, serialization."
repository = "https://github.com/larsbrubaker/atomartist"

[lib]
name = "atomartist_lib"
path = "src/lib.rs"

[dependencies]
