[package]
name = "atomartist-renderer"
version = "0.0.1"
edition = "2021"
rust-version = "1.70"
authors = ["Lars Brubaker <larsbrubaker@matterhackers.com>"]
license = "MIT"
description = "AtomArtist 3D viewport renderer (wgpu) — orbit camera, Blinn-Phong shading, gizmos."
repository = "https://github.com/larsbrubaker/atomartist"

[lib]
name = "atomartist_renderer"
path = "src/lib.rs"

[dependencies]
agg-gui        = { path = "../../agg-gui/agg-gui", default-features = false }
atomartist-lib = { path = "../atomartist-lib" }
demo-wgpu      = { path = "../../agg-gui/demo-wgpu", default-features = false }
manifold-rust  = { path = "../../manifold-rust" }
wgpu           = { version = "29", default-features = false, features = ["wgsl"] }
bytemuck       = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.wgpu]
version = "29"
default-features = false
features = ["wgsl", "vulkan", "dx12", "metal"]

[target.'cfg(target_arch = "wasm32")'.dependencies.wgpu]
version = "29"
default-features = false
features = ["wgsl", "webgl"]
