[package]
name = "atomartist-ui"
version = "0.0.1"
edition = "2021"
rust-version = "1.70"
authors = ["Lars Brubaker <larsbrubaker@matterhackers.com>"]
license = "MIT"
description = "AtomArtist shared widget tree — node canvas, property panel, toolbar, top-level layout."
repository = "https://github.com/larsbrubaker/atomartist"

[lib]
name = "atomartist_ui"
path = "src/lib.rs"

[dependencies]
agg-gui             = { path = "../../agg-gui/agg-gui", default-features = false }
atomartist-lib      = { path = "../atomartist-lib" }
atomartist-renderer = { path = "../atomartist-renderer" }
manifold-rust       = { path = "../../manifold-rust" }
