[package]
name = "demo-native"
version = "0.0.1"
edition = "2021"
rust-version = "1.70"
authors = ["Lars Brubaker <larsbrubaker@matterhackers.com>"]
license = "MIT"
description = "AtomArtist native shell — winit + wgpu window, event loop, disk persistence."

[[bin]]
name = "atomartist"
path = "src/main.rs"

[dependencies]
agg-gui             = { path = "../../agg-gui/agg-gui", default-features = false, features = ["winit-adapter"] }
atomartist-lib      = { path = "../atomartist-lib" }
atomartist-renderer = { path = "../atomartist-renderer" }
atomartist-ui       = { path = "../atomartist-ui" }
demo-wgpu           = { path = "../../agg-gui/demo-wgpu", default-features = false }
winit               = "0.30"
pollster            = "0.4"
raw-window-handle   = "0.6"
image               = { version = "0.24", default-features = false, features = ["png"] }
rfd                 = "0.15"
web-time            = "1"

[dependencies.wgpu]
version = "29"
default-features = false
features = ["wgsl", "vulkan", "dx12", "metal"]
