[package]
name = "demo-wasm"
version = "0.0.1"
edition = "2021"
rust-version = "1.70"
authors = ["Lars Brubaker <larsbrubaker@matterhackers.com>"]
license = "MIT"
description = "AtomArtist WASM shell — wasm-bindgen entry, browser window/canvas glue."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agg-gui                  = { path = "../../agg-gui/agg-gui", default-features = false }
atomartist-lib           = { path = "../atomartist-lib" }
atomartist-renderer      = { path = "../atomartist-renderer" }
atomartist-ui            = { path = "../atomartist-ui" }
demo-wgpu                = { path = "../../agg-gui/demo-wgpu", default-features = false }
wasm-bindgen             = "0.2"
wasm-bindgen-futures     = "0.4"
js-sys                   = "0.3"
console_error_panic_hook = "0.1"

[dependencies.wgpu]
version = "29"
default-features = false
features = ["wgsl", "webgl"]

[dependencies.web-sys]
version  = "0.3"
features = ["Window", "Document", "Element", "HtmlCanvasElement", "console"]
